[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluvius-interim"
version = "0.1.0"
authors = [
    { name = "Hung X. Le", email = "hunglx@adaptive-bits.com" },
    { name = "Phu V. Nguyen", email = "phunv@adaptive-bits.com" },
]
description = "Fluvius Interim - Workflow Management Package (cloned from riparius)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["workflow", "management", "riparius", "fluvius"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "aiohttp>=3.11.11",
    "aioredis>=2.0.0",
    "arq>=0.26.3",
    "asyncpg>=0.30.0",
    "blinker>=1.9.0",
    "casbin>=1.41.0",
    "click>=8.1.8",
    "fastapi-mcp>=0.3.3",
    "fsspec>=2025.3.2",
    "jsonurl-py>=0.4.0",
    "pipe>=2.2",
    "pydantic[email]>=2.11.4",
    "pyrsistent>=0.20.0",
    "ruff>=0.9.1",
    "sanic>=25.3.0",
    "sanic-jwt>=1.8.0",
    "sanic-security>=1.16.8",
    "sqlalchemy>=2.0.37",
    "ulid-py>=1.1.0",
    "whenever>=0.7.3",
    # Core fluvius dependencies (assuming they will be available)
    "fluvius>=0.1.0",  
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-html>=4.1.1",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=4.0.0",
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/adaptive-bits/fluvius-interim"
Repository = "https://github.com/adaptive-bits/fluvius-interim.git"
Documentation = "https://github.com/adaptive-bits/fluvius-interim/blob/main/README.md"
"Bug Tracker" = "https://github.com/adaptive-bits/fluvius-interim/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.black]
line-length = 119
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py312"
line-length = 119
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["fluvius_interim"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "fluvius.*",
    "pipe.*",
    "pyrsistent.*",
    "casbin.*",
    "arq.*",
]
ignore_missing_imports = true
